--- a/styles.css
+++ b/styles.css
@@ -108,7 +108,7 @@ header {
   position: relative;
   text-align: center;
   cursor: default;
-  margin: 50px 0 0 40px;
+  margin: 3rem 0 0 2.5rem;
 }
 
 .hovereffect .overlay {
@@ -136,7 +136,7 @@ header {
   color: #fff;
   text-align: center;
   position: relative;
-  font-size: 17px;
+  font-size: 1.2rem;
   padding: 10px;
   background: rgba(0, 0, 0, 0.6);
   -webkit-transform: translateY(200px);
