--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,16 @@ body {
   background-color: #DDDEE0;
   text-align: center;
   font-family: "Raleway";
+  width: 100%;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+.row {
+  margin-right: 0;
+  margin-left: 0;
 }
 
 /* HEADER */
@@ -10,16 +20,16 @@ header {
 }
 
 /* banner styling */
-.banner{
+.banner {
   position: relative;
 }
 
-.banner-img{
+.banner-img {
   width: 100%;
 }
 
 /* banner icons */
-.custom-icon{
+.custom-icon {
   position: absolute;
   color: white;
   top: 2rem;
@@ -48,6 +58,23 @@ header {
   font-size: 15px;
 }
 
+.dropdown-menu {
+  background-color: #343A40;
+  text-align: center;
+}
+
+.drop-link {
+  color: rgba(255, 255, 255, .5);
+  text-decoration: none !important;
+}
+
+.drop-link:hover {
+  transition: 0.5s;
+  color: #04c2c9 !important;
+  font-size: 16px;
+  cursor: pointer;
+}
+
 /* SEARCH BOX */
 .searchbar {
   height: 40px;
@@ -67,7 +94,7 @@ header {
 }
 
 .searchbar:hover>.search_input {
-  padding: 0 10px!important;
+  padding: 0 10px !important;
   width: 300px;
   transition: width 0.2s linear;
 }
@@ -88,18 +115,38 @@ header {
   text-decoration: none;
 }
 
-#apparel{
-  background-color: #DDDEE0;
-  /* padding: 0 10% 0 10%; */
+.main_heading {
+  margin: 1rem 0;
+}
+
+#apparel {
+  background-color: transparent;
+}
+
+.title-1 {
+  padding-top: 20px;
+  font-family: "Raleway";
+  font-size: 30pt;
+  font-weight: 600;
+  color: #04c2c9;
+}
+
+.title-bar-1 {
+  width: 70px;
+  height: 3px;
+  background-color: #04c2c9;
+  display: block;
+  margin: 10px auto 10px auto;
 }
 
 /* main menu(all available items display effects and properties) */
 
-.hovereffect img, .hovereffect .overlay, .hovereffect a.info{
+.hovereffect img, .hovereffect .overlay, .hovereffect a.info {
   max-width: 320px;
   max-height: 470px;
   width: 100%;
-  height:100%;
+  height: 100%;
+  margin-top: 40px;
 }
 
 .hovereffect {
@@ -116,7 +163,7 @@ header {
   overflow: hidden;
   top: 0;
   left: 0;
-  background-color: rgba(75,75,75,0.3);
+  background-color: rgba(255, 255, 255, 0.1);
   -webkit-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
 }
@@ -185,7 +232,6 @@ header {
   box-shadow: 0 0 5px #fff;
 }
 
-
 /* ABOUT */
 #about {
   background-color: #fff;
@@ -230,32 +276,22 @@ header {
   background-color: #FFFFFF;
 }
 
+#svg2 {
+  background-color: #DDDEE0;
+}
+
 /* CONTACT US*/
+#contact {
+  background-color: #DDDEE0;
+}
+
 .form-div {
-  height: 315px;
+  height: 250px;
 }
 
 .question-text {
   text-align: center;
   font-size: 17px;
-}
-
-.form-control {
-  width: 400px;
-  margin: 10px auto 0 auto;
-  background-color: #1b242f;
-}
-
-.submit-button {
-  text-align: center;
-  background-color: #1b242f;
-  margin: 10px auto auto 320px;
-  color: #fff;
-  padding: 9px 15px 9px 15px;
-  font-size: 16px;
-  border: 2px solid #fff;
-  transition: all 0.5s;
-  line-height: 20px;
 }
 
 .top-taker-button {
